"C1.6: Subir dab" COMPLETED
All c1.6 ws functions are working and complete

--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -27,6 +27,7 @@ select, input, textarea {
 	border: 1px solid #000;
 	background-color: #f7af37;
 	color: #000;
+	min-width: 210px;
 }
 .button {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
